Fixed Header and Logo Overlap

--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ body {
 }
 
 body.home header {
-    height: 240px;
+    padding: 0 0 100px;
 }
 
 hr {
